--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-numpy==1.24.3
-pandas==2.0.3
-matplotlib==3.7.1
-scipy==1.10.1 
+numpy>=1.24.3
+pandas>=2.0.3
+matplotlib>=3.7.1
+seaborn>=0.12.2
+scipy>=1.10.1
+shap>=0.45.1 
